; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_utvideodec.c_restore_median_planar_il.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_utvideodec.c_restore_median_planar_il.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 (i32*, i32*, i32, i32)*, i32 (i32*, i32*, i32*, i32, i32*, i32*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*, i32*, i32, i32, i32, i32, i32)* @restore_median_planar_il to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @restore_median_planar_il(%struct.TYPE_5__* %0, i32* %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca %struct.TYPE_5__*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32*, align 8
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32 %2, i32* %10, align 4
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i32 %5, i32* %13, align 4
  store i32 %6, i32* %14, align 4
  %26 = load i32, i32* %14, align 4
  %27 = icmp ne i32 %26, 0
  %28 = zext i1 %27 to i64
  %29 = select i1 %27, i32 3, i32 1
  %30 = xor i32 %29, -1
  store i32 %30, i32* %24, align 4
  %31 = load i32, i32* %10, align 4
  %32 = shl i32 %31, 1
  store i32 %32, i32* %25, align 4
  store i32 0, i32* %17, align 4
  br label %33

33:                                               ; preds = %244, %7
  %34 = load i32, i32* %17, align 4
  %35 = load i32, i32* %13, align 4
  %36 = icmp slt i32 %34, %35
  br i1 %36, label %37, label %247

37:                                               ; preds = %33
  %38 = load i32, i32* %17, align 4
  %39 = load i32, i32* %12, align 4
  %40 = mul nsw i32 %38, %39
  %41 = load i32, i32* %13, align 4
  %42 = sdiv i32 %40, %41
  %43 = load i32, i32* %24, align 4
  %44 = and i32 %42, %43
  store i32 %44, i32* %22, align 4
  %45 = load i32, i32* %17, align 4
  %46 = add nsw i32 %45, 1
  %47 = load i32, i32* %12, align 4
  %48 = mul nsw i32 %46, %47
  %49 = load i32, i32* %13, align 4
  %50 = sdiv i32 %48, %49
  %51 = load i32, i32* %24, align 4
  %52 = and i32 %50, %51
  %53 = load i32, i32* %22, align 4
  %54 = sub nsw i32 %52, %53
  store i32 %54, i32* %23, align 4
  %55 = load i32, i32* %23, align 4
  %56 = ashr i32 %55, 1
  store i32 %56, i32* %23, align 4
  %57 = load i32, i32* %23, align 4
  %58 = icmp ne i32 %57, 0
  br i1 %58, label %60, label %59

59:                                               ; preds = %37
  br label %244

60:                                               ; preds = %37
  %61 = load i32*, i32** %9, align 8
  %62 = load i32, i32* %22, align 4
  %63 = load i32, i32* %10, align 4
  %64 = mul nsw i32 %62, %63
  %65 = sext i32 %64 to i64
  %66 = getelementptr inbounds i32, i32* %61, i64 %65
  store i32* %66, i32** %21, align 8
  %67 = load i32*, i32** %21, align 8
  %68 = getelementptr inbounds i32, i32* %67, i64 0
  %69 = load i32, i32* %68, align 4
  %70 = add nsw i32 %69, 128
  store i32 %70, i32* %68, align 4
  %71 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %72 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %71, i32 0, i32 0
  %73 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %72, i32 0, i32 0
  %74 = load i32 (i32*, i32*, i32, i32)*, i32 (i32*, i32*, i32, i32)** %73, align 8
  %75 = load i32*, i32** %21, align 8
  %76 = load i32*, i32** %21, align 8
  %77 = load i32, i32* %11, align 4
  %78 = call i32 %74(i32* %75, i32* %76, i32 %77, i32 0)
  store i32 %78, i32* %18, align 4
  %79 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %80 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %79, i32 0, i32 0
  %81 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %80, i32 0, i32 0
  %82 = load i32 (i32*, i32*, i32, i32)*, i32 (i32*, i32*, i32, i32)** %81, align 8
  %83 = load i32*, i32** %21, align 8
  %84 = load i32, i32* %10, align 4
  %85 = sext i32 %84 to i64
  %86 = getelementptr inbounds i32, i32* %83, i64 %85
  %87 = load i32*, i32** %21, align 8
  %88 = load i32, i32* %10, align 4
  %89 = sext i32 %88 to i64
  %90 = getelementptr inbounds i32, i32* %87, i64 %89
  %91 = load i32, i32* %11, align 4
  %92 = load i32, i32* %18, align 4
  %93 = call i32 %82(i32* %86, i32* %90, i32 %91, i32 %92)
  %94 = load i32, i32* %25, align 4
  %95 = load i32*, i32** %21, align 8
  %96 = sext i32 %94 to i64
  %97 = getelementptr inbounds i32, i32* %95, i64 %96
  store i32* %97, i32** %21, align 8
  %98 = load i32, i32* %23, align 4
  %99 = icmp sle i32 %98, 1
  br i1 %99, label %100, label %101

100:                                              ; preds = %60
  br label %244

101:                                              ; preds = %60
  %102 = load i32*, i32** %21, align 8
  %103 = load i32, i32* %25, align 4
  %104 = sub nsw i32 0, %103
  %105 = sext i32 %104 to i64
  %106 = getelementptr inbounds i32, i32* %102, i64 %105
  %107 = load i32, i32* %106, align 4
  store i32 %107, i32* %20, align 4
  %108 = load i32, i32* %20, align 4
  %109 = load i32*, i32** %21, align 8
  %110 = getelementptr inbounds i32, i32* %109, i64 0
  %111 = load i32, i32* %110, align 4
  %112 = add nsw i32 %111, %108
  store i32 %112, i32* %110, align 4
  %113 = load i32*, i32** %21, align 8
  %114 = getelementptr inbounds i32, i32* %113, i64 0
  %115 = load i32, i32* %114, align 4
  store i32 %115, i32* %18, align 4
  store i32 1, i32* %15, align 4
  br label %116

116:                                              ; preds = %151, %101
  %117 = load i32, i32* %15, align 4
  %118 = load i32, i32* %11, align 4
  %119 = call i32 @FFMIN(i32 %118, i32 16)
  %120 = icmp slt i32 %117, %119
  br i1 %120, label %121, label %154

121:                                              ; preds = %116
  %122 = load i32*, i32** %21, align 8
  %123 = load i32, i32* %15, align 4
  %124 = load i32, i32* %25, align 4
  %125 = sub nsw i32 %123, %124
  %126 = sext i32 %125 to i64
  %127 = getelementptr inbounds i32, i32* %122, i64 %126
  %128 = load i32, i32* %127, align 4
  store i32 %128, i32* %19, align 4
  %129 = load i32, i32* %18, align 4
  %130 = load i32, i32* %19, align 4
  %131 = load i32, i32* %18, align 4
  %132 = load i32, i32* %19, align 4
  %133 = add nsw i32 %131, %132
  %134 = load i32, i32* %20, align 4
  %135 = sub nsw i32 %133, %134
  %136 = call i64 @mid_pred(i32 %129, i32 %130, i32 %135)
  %137 = load i32*, i32** %21, align 8
  %138 = load i32, i32* %15, align 4
  %139 = sext i32 %138 to i64
  %140 = getelementptr inbounds i32, i32* %137, i64 %139
  %141 = load i32, i32* %140, align 4
  %142 = sext i32 %141 to i64
  %143 = add nsw i64 %142, %136
  %144 = trunc i64 %143 to i32
  store i32 %144, i32* %140, align 4
  %145 = load i32, i32* %19, align 4
  store i32 %145, i32* %20, align 4
  %146 = load i32*, i32** %21, align 8
  %147 = load i32, i32* %15, align 4
  %148 = sext i32 %147 to i64
  %149 = getelementptr inbounds i32, i32* %146, i64 %148
  %150 = load i32, i32* %149, align 4
  store i32 %150, i32* %18, align 4
  br label %151

151:                                              ; preds = %121
  %152 = load i32, i32* %15, align 4
  %153 = add nsw i32 %152, 1
  store i32 %153, i32* %15, align 4
  br label %116

154:                                              ; preds = %116
  %155 = load i32, i32* %11, align 4
  %156 = icmp sgt i32 %155, 16
  br i1 %156, label %157, label %175

157:                                              ; preds = %154
  %158 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %159 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %158, i32 0, i32 0
  %160 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %159, i32 0, i32 1
  %161 = load i32 (i32*, i32*, i32*, i32, i32*, i32*)*, i32 (i32*, i32*, i32*, i32, i32*, i32*)** %160, align 8
  %162 = load i32*, i32** %21, align 8
  %163 = getelementptr inbounds i32, i32* %162, i64 16
  %164 = load i32*, i32** %21, align 8
  %165 = load i32, i32* %25, align 4
  %166 = sext i32 %165 to i64
  %167 = sub i64 0, %166
  %168 = getelementptr inbounds i32, i32* %164, i64 %167
  %169 = getelementptr inbounds i32, i32* %168, i64 16
  %170 = load i32*, i32** %21, align 8
  %171 = getelementptr inbounds i32, i32* %170, i64 16
  %172 = load i32, i32* %11, align 4
  %173 = sub nsw i32 %172, 16
  %174 = call i32 %161(i32* %163, i32* %169, i32* %171, i32 %173, i32* %18, i32* %19)
  br label %175

175:                                              ; preds = %157, %154
  %176 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %177 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %176, i32 0, i32 0
  %178 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %177, i32 0, i32 1
  %179 = load i32 (i32*, i32*, i32*, i32, i32*, i32*)*, i32 (i32*, i32*, i32*, i32, i32*, i32*)** %178, align 8
  %180 = load i32*, i32** %21, align 8
  %181 = load i32, i32* %10, align 4
  %182 = sext i32 %181 to i64
  %183 = getelementptr inbounds i32, i32* %180, i64 %182
  %184 = load i32*, i32** %21, align 8
  %185 = load i32, i32* %10, align 4
  %186 = sext i32 %185 to i64
  %187 = sub i64 0, %186
  %188 = getelementptr inbounds i32, i32* %184, i64 %187
  %189 = load i32*, i32** %21, align 8
  %190 = load i32, i32* %10, align 4
  %191 = sext i32 %190 to i64
  %192 = getelementptr inbounds i32, i32* %189, i64 %191
  %193 = load i32, i32* %11, align 4
  %194 = call i32 %179(i32* %183, i32* %188, i32* %192, i32 %193, i32* %18, i32* %19)
  %195 = load i32, i32* %25, align 4
  %196 = load i32*, i32** %21, align 8
  %197 = sext i32 %195 to i64
  %198 = getelementptr inbounds i32, i32* %196, i64 %197
  store i32* %198, i32** %21, align 8
  store i32 2, i32* %16, align 4
  br label %199

199:                                              ; preds = %240, %175
  %200 = load i32, i32* %16, align 4
  %201 = load i32, i32* %23, align 4
  %202 = icmp slt i32 %200, %201
  br i1 %202, label %203, label %243

203:                                              ; preds = %199
  %204 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %205 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %204, i32 0, i32 0
  %206 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %205, i32 0, i32 1
  %207 = load i32 (i32*, i32*, i32*, i32, i32*, i32*)*, i32 (i32*, i32*, i32*, i32, i32*, i32*)** %206, align 8
  %208 = load i32*, i32** %21, align 8
  %209 = load i32*, i32** %21, align 8
  %210 = load i32, i32* %25, align 4
  %211 = sext i32 %210 to i64
  %212 = sub i64 0, %211
  %213 = getelementptr inbounds i32, i32* %209, i64 %212
  %214 = load i32*, i32** %21, align 8
  %215 = load i32, i32* %11, align 4
  %216 = call i32 %207(i32* %208, i32* %213, i32* %214, i32 %215, i32* %18, i32* %19)
  %217 = load %struct.TYPE_5__*, %struct.TYPE_5__** %8, align 8
  %218 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %217, i32 0, i32 0
  %219 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %218, i32 0, i32 1
  %220 = load i32 (i32*, i32*, i32*, i32, i32*, i32*)*, i32 (i32*, i32*, i32*, i32, i32*, i32*)** %219, align 8
  %221 = load i32*, i32** %21, align 8
  %222 = load i32, i32* %10, align 4
  %223 = sext i32 %222 to i64
  %224 = getelementptr inbounds i32, i32* %221, i64 %223
  %225 = load i32*, i32** %21, align 8
  %226 = load i32, i32* %10, align 4
  %227 = sext i32 %226 to i64
  %228 = sub i64 0, %227
  %229 = getelementptr inbounds i32, i32* %225, i64 %228
  %230 = load i32*, i32** %21, align 8
  %231 = load i32, i32* %10, align 4
  %232 = sext i32 %231 to i64
  %233 = getelementptr inbounds i32, i32* %230, i64 %232
  %234 = load i32, i32* %11, align 4
  %235 = call i32 %220(i32* %224, i32* %229, i32* %233, i32 %234, i32* %18, i32* %19)
  %236 = load i32, i32* %25, align 4
  %237 = load i32*, i32** %21, align 8
  %238 = sext i32 %236 to i64
  %239 = getelementptr inbounds i32, i32* %237, i64 %238
  store i32* %239, i32** %21, align 8
  br label %240

240:                                              ; preds = %203
  %241 = load i32, i32* %16, align 4
  %242 = add nsw i32 %241, 1
  store i32 %242, i32* %16, align 4
  br label %199

243:                                              ; preds = %199
  br label %244

244:                                              ; preds = %243, %100, %59
  %245 = load i32, i32* %17, align 4
  %246 = add nsw i32 %245, 1
  store i32 %246, i32* %17, align 4
  br label %33

247:                                              ; preds = %33
  ret void
}

declare dso_local i32 @FFMIN(i32, i32) #1

declare dso_local i64 @mid_pred(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
